# modbus-sphere-library

./: .gitignore  LICENSE  README.md  ReadMe.txt  crc-util.c  crc-util.h  modbusCommon.h
Documentation/: azure_iot_h.html  index.html  message-handler_h.html  modbusCommon_h.html  modbus_h.html
Documentation/A7/Enums/: MODBUS_STATE.html  messageHandlerState_t.html  modbusTransportType_t.html
Documentation/A7/Functions/azure_iot_h/: AzureIoT_AddTwinUpdateCallback.html  AzureIoT_EventHandler.html  AzureIoT_SendMessage.html  AzureIoT_TwinReportState.html
Documentation/A7/Functions/modbus_h/: ModbusClose.html  ModbusConnectRtu.html  ModbusConnectRtuOverTcp.html  ModbusConnectTcp.html  ModbusErrorToString.html  ModbusExit.html  ModbusInit.html  ReadCoils.html  ReadDiscreteInputs.html  ReadFile.html  ReadFileSubRequestBuilder.html  ReadInputRegisters.html  ReadMultipleHoldingRegisters.html  WriteFile.html  WriteFileSubRequestBuilder.html  WriteMultipleCoils.html  WriteMultipleHoldingRegisters.html  WriteSingleCoil.html  WriteSingleHoldingRegister.html
Documentation/A7/Typedefs/: TWIN_CALLBACK.html  TwinUpdateContext.html  modbus_t.html  serialSetup.html
Documentation/M4/Typedefs/: messageHandle.html
Documentation/M4/message-handler_h/Functions/: GetMessageCommand.html  GetMessageDataPtr.html  GetMessageLength.html  GetMessageMaxLength.html  GetMessagePrefixPtr.html  GetMessageProtocol.html  InitMessage.html  ReadA7Message.html  SendA7Message.html  SetMessageCommand.html  SetMessageData.html  SetMessageLength.html  SetMessagePrefix.html  SetMessageProtocol.html
Documentation/modbusCommon_h/: messageProtocol.html  modbusMsgTypes.html  serialPortMsgTypes.html
ModbusOnSphereA7/: CMakeLists.txt  CMakeSettings.json  adam4150.c  adam4150.h  app_manifest.json  azure_iot.c  azure_iot.h  launch.vs.json  main.c  modbus.c  modbus.h  rtuovertcp.c  rtuovertcp.h  tcw241.c  tcw241.h
ModbusOnSphereM4/: CMakeLists.txt  CMakeSettings.json  app_manifest.json  main.c  message-handler.c  message-handler.h  mt3620-gpio.c  mt3620-gpio.h  mt3620-intercore.c  mt3620-uart.c  mt3620-uart.h
SlaveSimulator/: CMakeLists.txt  CMakeSettings.json  ReadMe.txt  main.c  modbuscommands.c  modbuscommands.h
